--- a/app/src/main/res/layout/activity_history.xml
+++ b/app/src/main/res/layout/activity_history.xml
@@ -1,73 +1,83 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
     tools:context=".activity.HistoryActivity">
 
-        <TableLayout
-            android:id="@+id/tableLayout"
-            android:background="@color/colorPrimary"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" >
-
-            <TableRow
-                android:id="@+id/rowHeader"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:weightSum="1">
-
-                <TextView
-                    android:id="@+id/headerDate"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.42"
-                    android:gravity="start"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
-                    android:paddingStart="10dp"
-                    android:fontFamily="@font/gotham_bold"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    android:textAllCaps="true"
-                    android:text="@string/header_date" />
-
-                <TextView
-                    android:id="@+id/headerClaim"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.29"
-                    android:gravity="start"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
-                    android:fontFamily="@font/gotham_bold"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    android:text="@string/header_amount" />
-
-                <TextView
-                    android:id="@+id/headerBalance"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_weight="0.29"
-                    android:gravity="start"
-                    android:paddingTop="15dp"
-                    android:paddingBottom="10dp"
-                    android:fontFamily="@font/gotham_bold"
-                    android:textColor="@color/white"
-                    android:textSize="15sp"
-                    android:text="@string/header_balance" />
-            </TableRow>
-        </TableLayout>
-
-    <ScrollView
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_top"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content">
-        <TableLayout
-            android:id="@+id/tableLayoutContent"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </ScrollView>
-</LinearLayout>
+        android:layout_height="wrap_content"
+        android:background="@color/brightBlue"
+        android:padding="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageBack"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_back"
+            app:layout_constraintBottom_toBottomOf="@id/layout_top"
+            app:layout_constraintStart_toStartOf="@id/layout_top"
+            app:layout_constraintTop_toTopOf="@id/layout_top" />
+
+        <TextView
+            android:id="@+id/header"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="@font/avenir_roman"
+            android:text="Transaction History"
+            android:textColor="@color/white"
+            android:textSize="16sp"
+            app:layout_constraintBottom_toBottomOf="@id/layout_top"
+            app:layout_constraintEnd_toEndOf="@id/layout_top"
+            app:layout_constraintStart_toStartOf="@id/layout_top"
+            app:layout_constraintTop_toTopOf="@id/layout_top" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+    <ListView
+        android:id="@+id/listTransaction"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/greyWhite"
+        android:divider="@null"
+        android:dividerHeight="0dp"
+        android:paddingBottom="10dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/layout_top" />
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/layout_empty"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/listTransaction">
+
+        <ImageView
+            android:id="@+id/img_paper"
+            android:layout_width="150dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="60dp"
+            android:src="@drawable/ic_paper"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="@id/layout_empty" />
+
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="15dp"
+            android:fontFamily="@font/gotham_bold"
+            android:text="No Data Found"
+            android:textColor="@color/transacRed"
+            android:textSize="15sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/img_paper" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
+</androidx.constraintlayout.widget.ConstraintLayout>
